Added a 3rd button to the app

--- a/FirstApp/res/values/strings.xml
+++ b/FirstApp/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="hello">Hello World, MainActivity!</string>
     <string name="app_name">FirstApp</string>
 	<string name="btn_string">A Button</string>
+	<string name="new_button">A New Button</string>
 	
 </resources>
