--- a/FirstApp/res/values/strings.xml
+++ b/FirstApp/res/values/strings.xml
@@ -3,7 +3,8 @@
 
     <string name="hello">Hello World, MainActivity!</string>
     <string name="app_name">FirstApp</string>
-	<string name="btn_string">A Button</string>
-	<string name="new_button">A New Button</string>
+	<string name="button_01">Web Browser</string>
+	<string name="button_02">Second Activity</string>
+	<string name="second_activity">A Second Activity</string>
 	
 </resources>
