--- a/FirstApp/res/values/strings.xml
+++ b/FirstApp/res/values/strings.xml
@@ -13,4 +13,10 @@
 	<string name="chk_android">Android</string>
 	<string name="chk_windows">Windows</string>
 	<string name="btn_display">Display</string>
+		
+	<!-- Radio Buttons -->
+	<string name="radio_male">Male</string>
+	<string name="radio_female">Female</string>
+	<string name="radio_other">Other</string>
+	<string name="gender_display">Display Gender</string>
 </resources>
