--- a/FirstApp/res/values/strings.xml
+++ b/FirstApp/res/values/strings.xml
@@ -19,4 +19,6 @@
 	<string name="radio_female">Female</string>
 	<string name="radio_other">Other</string>
 	<string name="gender_display">Display Gender</string>
+	<string name="third_act_toggle_on">Toggle On</string>
+	<string name="third_act_toggle_off">Toggle Off</string>
 </resources>
