--- a/FirstApp/res/values/strings.xml
+++ b/FirstApp/res/values/strings.xml
@@ -21,4 +21,5 @@
 	<string name="gender_display">Display Gender</string>
 	<string name="third_act_toggle_on">Toggle On</string>
 	<string name="third_act_toggle_off">Toggle Off</string>
+	<string name="play_audio">Play audio</string>
 </resources>
