Trying to add storage class Audio_Data.  It can import but when I go to use .get() method it blows up.  I need to look at that method more closely and study up on HashMap

--- a/FirstApp/res/values/strings.xml
+++ b/FirstApp/res/values/strings.xml
@@ -21,5 +21,6 @@
 	<string name="gender_display">Display Gender</string>
 	<string name="third_act_toggle_on">Toggle On</string>
 	<string name="third_act_toggle_off">Toggle Off</string>
-	<string name="play_audio">Play audio</string>
+	<string name="btn_a">A</string>
+	<string name="btn_b">B</string>
 </resources>
