Added in a progess bar and button using Android Studio.  Weird event happened where I had to delete the app for it to run the first time.

--- a/FirstApp/res/values/strings.xml
+++ b/FirstApp/res/values/strings.xml
@@ -24,7 +24,7 @@
 	<string name="btn_a">A</string>
 	<string name="btn_b">B</string>
 
-	<string name="country_prompt">Choose a country</string>
+	<string name="country_prompt">Choose a country</string><string name="progress_string">Prog</string>
 
 	<string-array name="country_array">
 		<item>Malaysia</item>
