--- a/FirstApp/res/values/strings.xml
+++ b/FirstApp/res/values/strings.xml
@@ -16,6 +16,7 @@
 	<string name="prog_act_button_string">Progress Activity</string>
 	<string name="progress_button">Make Progress</string>
 	<string name="progress_activity">Progress Activity</string>
+	<string name="popup_dialog_string">popup Dialog</string>
 	
 	<!-- Radio Buttons -->
 	<string name="radio_male">Male</string>
