--- a/FirstApp/res/values/strings.xml
+++ b/FirstApp/res/values/strings.xml
@@ -17,7 +17,7 @@
 	<string name="progress_button">Make Progress</string>
 	<string name="progress_activity">Progress Activity</string>
 	<string name="popup_dialog_string">popup Dialog</string>
-	
+	<string name="prog_print_log">Print log</string>	
 	<!-- Radio Buttons -->
 	<string name="radio_male">Male</string>
 	<string name="radio_female">Female</string>
