--- a/FirstApp/res/values/strings.xml
+++ b/FirstApp/res/values/strings.xml
@@ -28,6 +28,8 @@
 	<string name="btn_a">A</string>
 	<string name="btn_b">B</string>
 
+	<string name="log_view_text">Log Viewer</string>
+	
 	<string name="country_prompt">Choose a country</string><string name="progress_string">Prog</string>
 
 	<string-array name="country_array">
